[package]
name = "tx-boost"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
chrono = { version = "0.4.22", features = ["default", "serde"] }
uuid = "1.5"
url = { version = "2.3.1", default-features = false }
reqwest = { version = "0.12", features = ["json"], default-features = false }
thiserror = "1.0"
ethers = { version = "2.0.0", default-features = false }
async-trait = { version = "0.1.58", default-features = false }
futures-util = "0.3"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
ethers = { version = "2.0.0", default-features = false }
eyre = "0.6"

[features]
default = ['openssl']
openssl = ['ethers/openssl', 'reqwest/default-tls']
rustls = ['ethers/rustls', 'reqwest/rustls-tls']